<resources>
    <string name="app_name">StoryApp V-1</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Bagikan keseharianmu disini bersama teman-teman lainnya!</string>
    <string name="title_welcome_page">Selamat datang di Story App!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah gak sabar untuk berbagi cerita?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>

    <string name="post_story">Add Story</string>

    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="text_deskripsi">Deskripsi . . .</string>
    <string name="gambar_cerita">Gambar Cerita</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="image_detail">Image Detail</string>
    <string name="date">Date</string>

    <string name="error_password">Password tidak boleh kurang dari 8 karakter</string>
</resources>